fix: align the seats in the middle

--- a/src/features/cinema/SelectSeat.css
+++ b/src/features/cinema/SelectSeat.css
@@ -1,4 +1,5 @@
 .block-height-60 {
+    text-align: center;
     height: 60px;
     line-height: 60px;
 }
